project/tests/in_progress/for_main/bad/types/composite_types/pointers/simple_types_ptr/int/int_ptr02/int_ptr02.c
#include <stdio.h>

int a = 5;
int *b = &a;

int main() {
    printf("%d\n", *b);
    return 0;
}
